Reduce to only material design pres.

--- a/theme/scss/default.scss
+++ b/theme/scss/default.scss
@@ -469,6 +469,10 @@ button:not(:disabled):active {
   @include column-count(2);
 }
 
+.vidddeo {
+  -webkit-transform: translateZ(0)
+}
+
 table {
   width: 100%;
   border-collapse: -moz-initial;
